add api docs for util controller [#261]
